# fleteros-client

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: bump-version.mjs  deploy-launcher.ps1
src/: index.html  launcher.html
src-tauri/: Cargo.toml  tauri-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/admin/: mod.rs
src-tauri/src/auth/: azauth.rs  microsoft.rs  mod.rs  offline.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/discord/: mod.rs
src-tauri/src/launcher/: downloader.rs  instance.rs  java.rs  mod.rs  process.rs
src-tauri/src/security/: mod.rs
src/css/: animations.css  base.css  launcher.css  theme.css
src/css/panels/: admin.css  home.css  login.css  settings.css
src/js/: brand.js  index.js  launcher.js
src/js/panels/: admin.js  home.js  login.js  settings.js
src/js/utils/: notify.js
