[package]
name = "fleteros-client"
version = "1.2.1"
edition = "2021"

[package.metadata.bundle]
name = "Fleteros Client"
identifier = "online.pablorelojero.fleteros-client"

[lib]
name = "fleteros_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

rusqlite = { version = "0.31", features = ["bundled"] }

sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v3", "v5"] }

zip = "2"
xml-rs = "0.8"

discord-rich-presence = "0.2"

open = "5"

thiserror = "1"
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
