[package]
name = "launcher"
version = "1.3.8"
edition = "2021"

[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.6.3", features = ["unstable"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-http = "2.5.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

rusqlite = { version = "0.31", features = ["bundled"] }

sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v3", "v5"] }

zip = "2"
xml-rs = "0.8"

discord-rich-presence = "0.2"

open = "5"

thiserror = "1"
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
